组件插槽-深层理解

--- a/01-vue_basic/02_Vue的模板语法/05_语法-v-pre指令使用.html
+++ b/01-vue_basic/02_Vue的模板语法/05_语法-v-pre指令使用.html
@@ -5,6 +5,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- 
+        ◼ v-pre用于跳过元素和它的子元素的编译过程，显示原始的Mustache标签：
+             跳过不需要编译的节点，加快编译的速度；
+     -->
     <div id="app">
         <h2>{{ message }}</h2>
         <h2>{{ counter }}</h2>
