--- a/01-vue_basic/05_Vue的列表渲染/04_数组更新检测.html
+++ b/01-vue_basic/05_Vue的列表渲染/04_数组更新检测.html
@@ -24,7 +24,7 @@
                     // 1. 直接将数组修改为一个新的数组
                     // this.names = ['abc', 'cba']
                     // 2. 通过一些数组的方法，修改数组的元素
-                    // this.names.push('eee')
+                    this.names.push('eee')
                     // 3. 修改原数组的方法都可以监听到修改：push pop unshift shift reserve sort splice
                     // this.names.splice(2, 1, 'bbc')
 
