--- a/01-vue_basic/02_Vue的模板语法/02_语法-v-once指令使用.html
+++ b/01-vue_basic/02_Vue的模板语法/02_语法-v-once指令使用.html
@@ -7,9 +7,19 @@
 <body>
     <div id="app">
         <!-- 指令： v-once -->
+        <!-- 
+            ◼ v-once用于指定元素或者组件只渲染一次：
+             当数据发生变化时，元素或者组件以及其所有的子元素将视为静态内容并且跳过；
+             该指令可以用于性能优化；
+        -->
         <h2 v-once >{{ message }}, counter: {{ counter }}</h2>
         <h2>{{ message }}</h2>
         <button @click="changeMessage">修改 message</button>
+        <!-- ◼ 如果是子节点，也是只会渲染一次： -->
+        <div v-once>
+            <h2>当前计数：{{counter}}</h2>
+            <button @click="increment">+1</button>
+        </div>
     </div>
     <script src="../lib/Vue.js"></script>
     <script>
@@ -24,6 +34,9 @@
                 changeMessage() {
                     this.message = 'Hello world'
                     this.counter += 100
+                },
+                increment() {
+                    this.counter++
                 }
             }
         })
