--- a/01-vue_basic/04_Vue的条件渲染/01_完成需求demo.html
+++ b/01-vue_basic/04_Vue的条件渲染/01_完成需求demo.html
@@ -18,7 +18,8 @@
             data() {
                 return {
                     // names: ['aaa', 'bbb', 'ccc'],
-                    names: ['aaa']
+                    // names: ['aaa'],
+                    names: []
                 }
             },
         })
